# workbench

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/actions/update-homebrew-tap/: action.yml
.github/workflows/: ci.yml  release.yml  sync-docs.lock.yml  sync-docs.md
Formula/: workbench.rb
tests/: conftest.py  test_adapters.py  test_agents.py  test_cli.py  test_directives.py  test_docs.py  test_orchestrator.py  test_pipeline.py  test_plan_parser.py  test_profile.py  test_prompt_builder.py  test_session_status.py  test_standalone_runners.py  test_tmux.py  test_worktree.py
workbench/: __init__.py  adapters.py  agents.py  cli.py  directives.py  orchestrator.py  plan_guide.md  plan_parser.py  profile.py  session_status.py  tmux.py  worktree.py
workbench/directive_texts/: __init__.py  fixer.md  implementor.md  merger.md  planner.md  reviewer.md  reviewer_followup.md  tdd_implementor.md  tdd_tester.md  tester.md
workbench/skills/: implement.md  review.md
workbench/skills/configure-workbench/: SKILL.md
workbench/skills/install-workbench/: SKILL.md
workbench/skills/use-workbench/: SKILL.md
