[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wbcli"
dynamic = ["version"]
description = "Lightweight multi-agent orchestrator for iterative development"
license = "MIT"
authors = [{name = "Duncan McKinnon"}]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=6.0",
    "pre-commit>=3.6",
    "black>=24.0",
    "isort>=5.13",
]

[project.urls]
Repository = "https://github.com/duncankmckinnon/workbench"

[project.scripts]
wb = "workbench.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"workbench" = ["plan_guide.md"]
"workbench.skills" = ["**/*.md"]

[tool.setuptools_scm]
write_to = "workbench/_version.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=workbench --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
omit = [
    "workbench/_version.py",
    "workbench/skills/*",
]

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 99

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
